apps/seedbox/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: seedbox
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    port: 80
    targetPort: 8989
    protocol: TCP
